--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -105,6 +105,7 @@
   color: black;
   text-align: justify;
   font-size: larger;
+  margin-top: -20px;
   font-family: Inter,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
 }
 
@@ -157,7 +158,14 @@
 .btnhover>.btn:active {
   box-shadow: none;
 }
-
+.card:hover .icon-backgroundforexpress {
+  background-color: #f0e8e8fb;
+  padding: 4px;
+  border-radius: 0.5rem;
+  display: flex;
+  align-items: center;
+  filter: none;
+}
 
 .card:hover .heading {
   color: white;
@@ -204,7 +212,7 @@
 .techstacks {
   display: flex;
   justify-content: space-between;
-  width: 60%;
+  width:60%;
   margin: auto;
 }
 
